# devfoundry

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  LICENSE  Makefile  README.md  docker-compose.yml  docs.html  index.html  mcp.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: cli.py  config.py  embedded_services.py  knowledge.py  llm.py  llm_providers.py  logging_conf.py  main.py  research.py  sandbox.py  skills.py  store.py  vectorstore.py
backend/app/api/: extra_routes.py  hardware_routes.py  llm_routes.py  mcp_routes.py  project_routes.py  routes.py  ws.py
backend/app/events/: bus.py
backend/app/mcp/: client.py  registry.py
backend/app/models/: schemas.py
backend/app/orchestrator/: deploy_providers.py  embedded.py  mock.py  pipeline.py  reasoning.py
backend/app/services/: base.py  boltdiy_service.py  metagpt_service.py  opencode_service.py  orc_service.py  superpowers_service.py
backend/devfoundry.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/tests/: test_api.py  test_pipeline.py
docs/: ARCHITECTURE.md  DEMO.md  FEATURES.md  LAUNCH.md  RESEARCH-NOTES.md  ROADMAP.md  SIGNING.md  TROUBLESHOOTING.md  TUTORIAL.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  (+3 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
website/: index.html
(+41 files in other folders)
