[project]
name = "devfoundry"
version = "0.2.2"
description = "The local-first AI software factory — CLI + orchestrator. By King3Djbl of KingLabs."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115", "uvicorn[standard]>=0.30", "httpx>=0.27", "pydantic>=2.7",
  "pydantic-settings>=2.3", "python-dotenv>=1.0", "huggingface-hub>=0.24",
  "python-multipart>=0.0.9", "websockets>=12",
]

[project.scripts]
devfoundry = "app.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
anyio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8", "anyio>=4", "httpx>=0.27"]
